[build-system]
requires = ["flit_core >=3.8.0,<4"]
build-backend = "flit_core.buildapi"

[project]
name = 'pybravo'
version = '0.1.1'
description = 'An easy-to-use interface for the Reach Bravo 7 manipulator'
readme = 'README.md'
authors = [
  { name = 'Evan Palmer', email='evanp922@gmail.com' },
]
license = {file = 'LICENSE'}
requires-python = '>=3.8'
dependencies = [
  "crc>=4.2.0",
  "cobs>=1.2.0"
]
classifiers = [
    'Development Status :: 3 - Alpha',
    'Environment :: Console',
    'Intended Audience :: Science/Research',
    'License :: OSI Approved :: MIT License',
    'Operating System :: OS Independent',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3 :: Only',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Topic :: Scientific/Engineering'
]

[project.urls]
repository = 'https://github.com/Robotic-Decision-Making-Lab/pybravo'

[project.optional-dependencies]
test = ['pytest>=7.0.0']

[tool.black]
target-version = ['py310']
required-version = '23.3.0'
exclude = '''
(
   \.git
  | \.mypy_cache
  | \.nox
  | \.tox
  | \.venv
  | _build
  | build
  | dist
  | __pycache__
)
'''

[tool.ruff]
line-length = 88
target-version = 'py310'
fix = true

select = [
  # pyflakes
  "F",
  # pycodestyle
  "E", "W",
  # flake8-bugbear
  "B",
  # pep8-naming
  "N",
  # isort
  "I",
  # pydocstyle
  "D",
  # flake8-quotes
  "Q",
  # pylint
  "PLC", "PLE", "PLR", "PLW"
]

ignore = [
  "D203",
  "D213",
  "D215",
  "D406",
  "D407",
  "D408",
  "D409",
  "D413",
  "D100",
  "D104",
  "E203"
]

exclude = [
  ".eggs/*.py",
]

[tool.pylint.messages_control]
max-line-length = 88
disable = [
  "line-too-long"
]

[tool.isort]
profile = "black"

[tool.pyright]
pythonVersion = "3.10"
typeCheckingMode = "basic"
exclude = ["pybravo/tests"]

[tool.codespell]
ignore-words-list = "pybravo"
ignore-regex = 'https://([\w/\.])+'
